# libfcache

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfcache-wiki.ini  libfcache.ini  libfcache.pc.in  libfcache.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build_package.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfcache.h.in
include/libfcache/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfcache/: Makefile.am  libfcache.c  libfcache.rc.in  libfcache_cache.c  libfcache_cache.h  libfcache_cache_value.c  libfcache_cache_value.h  libfcache_date_time.c  libfcache_date_time.h  libfcache_definitions.h  libfcache_definitions.h.in  libfcache_error.c  libfcache_error.h  libfcache_extern.h  libfcache_libcdata.h  libfcache_libcerror.h  libfcache_support.c  libfcache_support.h  libfcache_types.h  libfcache_unused.h
manuals/: Makefile.am  libfcache.3
msvscpp/: Makefile.am  libfcache.sln
msvscpp/fcache_test_cache/: fcache_test_cache.vcproj
msvscpp/fcache_test_cache_value/: fcache_test_cache_value.vcproj
msvscpp/fcache_test_date_time/: fcache_test_date_time.vcproj
msvscpp/fcache_test_error/: fcache_test_error.vcproj
msvscpp/fcache_test_get_version/: fcache_test_get_version.vcproj
msvscpp/fcache_test_support/: fcache_test_support.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfcache_dll/: libfcache_dll.vcproj
tests/: Makefile.am  fcache_test_cache.c  fcache_test_cache_value.c  fcache_test_date_time.c  fcache_test_error.c  fcache_test_get_version.c  fcache_test_libcerror.h  fcache_test_libcstring.h  fcache_test_libfcache.h  fcache_test_macros.h  fcache_test_memory.c  fcache_test_memory.h  fcache_test_support.c  fcache_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_functions.ps1  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
