include_HEADERS = \
	libfcache.h

pkginclude_HEADERS = \
	libfcache/definitions.h \
	libfcache/error.h \
	libfcache/extern.h \
	libfcache/features.h \
	libfcache/types.h

EXTRA_DIST = \
	libfcache.h.in \
	libfcache/definitions.h.in \
	libfcache/features.h.in \
	libfcache/types.h.in

DISTCLEANFILES = \
	libfcache.h \
	libfcache/definitions.h \
	libfcache/features.h \
	libfcache/types.h \
	Makefile \
	Makefile.in

