MSVSCPP_FILES = \
	fcache_test_cache/fcache_test_cache.vcproj \
	fcache_test_cache_value/fcache_test_cache_value.vcproj \
	fcache_test_date_time/fcache_test_date_time.vcproj \
	fcache_test_error/fcache_test_error.vcproj \
	fcache_test_support/fcache_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfcache.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

